kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
      app.kubernetes.io/instance: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
        app.kubernetes.io/instance: web
    spec:
      containers:
        - name: django-app
          image: etokosmo/django_app:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django-app
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: web
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
